# SentinelPerf

./: .dockerignore  Dockerfile  README.md  build-binary.sh  docker-compose.yml  pyproject.toml  requirements.txt  sentinelperf.spec  sentinelperf.yaml  sentinelperf.yaml.example  test_result.md  test_server.py
.emergent/: emergent.yml  summary.txt
sentinelperf/: __init__.py  cli.py
sentinelperf-reports/: sentinelperf_report_20251221_161336.md  sentinelperf_report_20251221_161551.md  sentinelperf_report_20251221_161629.md  sentinelperf_report_20251221_161935.md  sentinelperf_report_20251221_162021.md  sentinelperf_report_20251221_163149.md  sentinelperf_report_20251221_164329.md  sentinelperf_report_20251221_165110.md  sentinelperf_report_20251221_172523.md  sentinelperf_report_20251221_173929.md  sentinelperf_report_20251221_174341.md  sentinelperf_report_20251221_174707.md  sentinelperf_report_20251221_175708.md  sentinelperf_report_20251221_181426.md  sentinelperf_report_20251221_181756.md  sentinelperf_report_20251221_182939.md  sentinelperf_report_20251221_184028.md  sentinelperf_report_20251221_190001.md  sentinelperf_report_20251221_191007.md  sentinelperf_report_20251221_191951.md  sentinelperf_report_20251221_192425.md  sentinelperf_report_20251221_193128.md  sentinelperf_report_20251221_194031.md  sentinelperf_report_20251221_194912.md  sentinelperf_report_20251221_195304.md  sentinelperf_report_20251221_195837.md  sentinelperf_report_20251223_071103.md  sentinelperf_report_20251223_071120.md  sentinelperf_report_20251223_071756.md  sentinelperf_report_20251223_072432.md  sentinelperf_report_20251223_093954.md  sentinelperf_report_20251223_095210.md  sentinelperf_report_20251223_095227.md  sentinelperf_report_20251223_100206.md  sentinelperf_report_20251223_101023.md  sentinelperf_report_20251223_102213.md  sentinelperf_report_20251223_125424.md  sentinelperf_summary_20251221_161336.json  sentinelperf_summary_20251221_161551.json  sentinelperf_summary_20251221_161629.json  (+34 more)
sentinelperf/analysis/: __init__.py  (+3 more)
test_data/: sample_otel_export.json
(+34 files in other folders)
